--- a/templates/form2.html
+++ b/templates/form2.html
@@ -34,6 +34,10 @@ div.highcard {
 <body>
 <form method="post" action="/comboresults">
     {{ form.csrf_token }}
+    Flop:
+    {{ form.flop1(size='4', autocomplete='off') }}
+    {{ form.flop2(size='4', autocomplete='off') }}
+    {{ form.flop3(size='4', autocomplete='off') }} <br><br><Br>
     {% for combo in form.combos %}
         {{ combo(size='4', autocomplete='off') }} {{ hands[loop.index0] }} <br>
     {% endfor %}
